usl-sintactico/y.output
Grammar

    0 $accept: program $end

    1 program: decla bloq

    2 decla: %empty
    3      | sentdecla decla

    4 sentdecla: ID '=' exp ';'
    5          | DEFINEF ID '(' paramd ')' ':' TIPOENT '{' bloques '}'

    6 bloq: '{' bloques '}'

    7 bloques: %empty
    8        | sent bloques

    9 sent: DESPLIEGA '(' exp ')' ';'
   10     | DESPLIEGA '(' CADE ')' ';'
   11     | SI '(' logexp ')' sent
   12     | SI '(' logexp ')' sent OTRO sent
   13     | SI logexp sent
   14     | SI logexp sent OTRO sent
   15     | SI '(' logexp ')' '{' bloques '}'
   16     | SI '(' logexp ')' '{' bloques '}' OTRO sent
   17     | SI logexp '{' bloques '}'
   18     | SI logexp '{' bloques '}' OTRO sent
   19     | MIENTRAS '(' logexp ')' sent
   20     | MIENTRAS logexp sent
   21     | MIENTRAS '(' logexp ')' '{' bloques '}'
   22     | MIENTRAS logexp '{' bloques '}'
   23     | ID '=' exp ';'
   24     | REGRESA exp ';'
   25     | ID '(' parami ')' ';'

   26 exp: ENTERO
   27    | ID
   28    | ID '(' parami ')'
   29    | exp '+' exp
   30    | exp '-' exp
   31    | exp '*' exp
   32    | exp '/' exp
   33    | '(' exp ')'

   34 logexp: logexp AND logexp
   35       | logexp OR logexp
   36       | NOT logexp
   37       | exp IGUAL exp
   38       | exp DIFER exp
   39       | exp MAYORQUE exp
   40       | exp MENORQUE exp
   41       | exp MAYORIGUAL exp
   42       | exp MENORIGUAL exp

   43 paramd: %empty
   44       | ID lparam

   45 lparam: %empty
   46       | ',' ID lparam

   47 parami: %empty
   48       | exp lparami

   49 lparami: %empty
   50        | ',' exp lparami


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 9 10 11 12 15 16 19 21 25 28 33
')' (41) 5 9 10 11 12 15 16 19 21 25 28 33
'*' (42) 31
'+' (43) 29
',' (44) 46 50
'-' (45) 30
'/' (47) 32
':' (58) 5
';' (59) 4 9 10 23 24 25
'=' (61) 4 23
'{' (123) 5 6 15 16 17 18 21 22
'}' (125) 5 6 15 16 17 18 21 22
error (256)
ID (258) 4 5 23 25 27 28 44 46
CADE (259) 10
ENTERO (260) 26
DESPLIEGA (261) 9 10
REGRESA (262) 24
TIPOENT (263) 5
SI (264) 11 12 13 14 15 16 17 18
OTRO (265) 12 14 16 18
MIENTRAS (266) 19 20 21 22
DEFINEF (267) 5
NOT (268) 36
OR (269) 35
AND (270) 34
DIFER (271) 38
IGUAL (272) 37
MAYORQUE (273) 39
MENORQUE (274) 40
MAYORIGUAL (275) 41
MENORIGUAL (276) 42


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
program (35)
    on left: 1, on right: 0
decla (36)
    on left: 2 3, on right: 1 3
sentdecla (37)
    on left: 4 5, on right: 3
bloq (38)
    on left: 6, on right: 1
bloques (39)
    on left: 7 8, on right: 5 6 8 15 16 17 18 21 22
sent (40)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25, on right:
    8 11 12 13 14 16 18 19 20
exp (41)
    on left: 26 27 28 29 30 31 32 33, on right: 4 9 23 24 29 30 31
    32 33 37 38 39 40 41 42 48 50
logexp (42)
    on left: 34 35 36 37 38 39 40 41 42, on right: 11 12 13 14 15 16
    17 18 19 20 21 22 34 35 36
paramd (43)
    on left: 43 44, on right: 5
lparam (44)
    on left: 45 46, on right: 44 46
parami (45)
    on left: 47 48, on right: 25 28
lparami (46)
    on left: 49 50, on right: 48 50


State 0

    0 $accept: . program $end

    ID       shift, and go to state 1
    DEFINEF  shift, and go to state 2

    $default  reduce using rule 2 (decla)

    program    go to state 3
    decla      go to state 4
    sentdecla  go to state 5


State 1

    4 sentdecla: ID . '=' exp ';'

    '='  shift, and go to state 6


State 2

    5 sentdecla: DEFINEF . ID '(' paramd ')' ':' TIPOENT '{' bloques '}'

    ID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: decla . bloq

    '{'  shift, and go to state 9

    bloq  go to state 10


State 5

    3 decla: sentdecla . decla

    ID       shift, and go to state 1
    DEFINEF  shift, and go to state 2

    $default  reduce using rule 2 (decla)

    decla      go to state 11
    sentdecla  go to state 5


State 6

    4 sentdecla: ID '=' . exp ';'

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 15


State 7

    5 sentdecla: DEFINEF ID . '(' paramd ')' ':' TIPOENT '{' bloques '}'

    '('  shift, and go to state 16


State 8

    0 $accept: program $end .

    $default  accept


State 9

    6 bloq: '{' . bloques '}'

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21

    $default  reduce using rule 7 (bloques)

    bloques  go to state 22
    sent     go to state 23


State 10

    1 program: decla bloq .

    $default  reduce using rule 1 (program)


State 11

    3 decla: sentdecla decla .

    $default  reduce using rule 3 (decla)


State 12

   27 exp: ID .
   28    | ID . '(' parami ')'

    '('  shift, and go to state 24

    $default  reduce using rule 27 (exp)


State 13

   26 exp: ENTERO .

    $default  reduce using rule 26 (exp)


State 14

   33 exp: '(' . exp ')'

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 25


State 15

    4 sentdecla: ID '=' exp . ';'
   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ';'  shift, and go to state 30


State 16

    5 sentdecla: DEFINEF ID '(' . paramd ')' ':' TIPOENT '{' bloques '}'

    ID  shift, and go to state 31

    $default  reduce using rule 43 (paramd)

    paramd  go to state 32


State 17

   23 sent: ID . '=' exp ';'
   25     | ID . '(' parami ')' ';'

    '='  shift, and go to state 33
    '('  shift, and go to state 34


State 18

    9 sent: DESPLIEGA . '(' exp ')' ';'
   10     | DESPLIEGA . '(' CADE ')' ';'

    '('  shift, and go to state 35


State 19

   24 sent: REGRESA . exp ';'

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 36


State 20

   11 sent: SI . '(' logexp ')' sent
   12     | SI . '(' logexp ')' sent OTRO sent
   13     | SI . logexp sent
   14     | SI . logexp sent OTRO sent
   15     | SI . '(' logexp ')' '{' bloques '}'
   16     | SI . '(' logexp ')' '{' bloques '}' OTRO sent
   17     | SI . logexp '{' bloques '}'
   18     | SI . logexp '{' bloques '}' OTRO sent

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    NOT     shift, and go to state 37
    '('     shift, and go to state 38

    exp     go to state 39
    logexp  go to state 40


State 21

   19 sent: MIENTRAS . '(' logexp ')' sent
   20     | MIENTRAS . logexp sent
   21     | MIENTRAS . '(' logexp ')' '{' bloques '}'
   22     | MIENTRAS . logexp '{' bloques '}'

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    NOT     shift, and go to state 37
    '('     shift, and go to state 41

    exp     go to state 39
    logexp  go to state 42


State 22

    6 bloq: '{' bloques . '}'

    '}'  shift, and go to state 43


State 23

    8 bloques: sent . bloques

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21

    $default  reduce using rule 7 (bloques)

    bloques  go to state 44
    sent     go to state 23


State 24

   28 exp: ID '(' . parami ')'

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    $default  reduce using rule 47 (parami)

    exp     go to state 45
    parami  go to state 46


State 25

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   33    | '(' exp . ')'

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ')'  shift, and go to state 47


State 26

   29 exp: exp '+' . exp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 48


State 27

   30 exp: exp '-' . exp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 49


State 28

   31 exp: exp '*' . exp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 50


State 29

   32 exp: exp '/' . exp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 51


State 30

    4 sentdecla: ID '=' exp ';' .

    $default  reduce using rule 4 (sentdecla)


State 31

   44 paramd: ID . lparam

    ','  shift, and go to state 52

    $default  reduce using rule 45 (lparam)

    lparam  go to state 53


State 32

    5 sentdecla: DEFINEF ID '(' paramd . ')' ':' TIPOENT '{' bloques '}'

    ')'  shift, and go to state 54


State 33

   23 sent: ID '=' . exp ';'

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 55


State 34

   25 sent: ID '(' . parami ')' ';'

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    $default  reduce using rule 47 (parami)

    exp     go to state 45
    parami  go to state 56


State 35

    9 sent: DESPLIEGA '(' . exp ')' ';'
   10     | DESPLIEGA '(' . CADE ')' ';'

    ID      shift, and go to state 12
    CADE    shift, and go to state 57
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 58


State 36

   24 sent: REGRESA exp . ';'
   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ';'  shift, and go to state 59


State 37

   36 logexp: NOT . logexp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    NOT     shift, and go to state 37
    '('     shift, and go to state 14

    exp     go to state 39
    logexp  go to state 60


State 38

   11 sent: SI '(' . logexp ')' sent
   12     | SI '(' . logexp ')' sent OTRO sent
   15     | SI '(' . logexp ')' '{' bloques '}'
   16     | SI '(' . logexp ')' '{' bloques '}' OTRO sent
   33 exp: '(' . exp ')'

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    NOT     shift, and go to state 37
    '('     shift, and go to state 14

    exp     go to state 61
    logexp  go to state 62


State 39

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   37 logexp: exp . IGUAL exp
   38       | exp . DIFER exp
   39       | exp . MAYORQUE exp
   40       | exp . MENORQUE exp
   41       | exp . MAYORIGUAL exp
   42       | exp . MENORIGUAL exp

    DIFER       shift, and go to state 63
    IGUAL       shift, and go to state 64
    MAYORQUE    shift, and go to state 65
    MENORQUE    shift, and go to state 66
    MAYORIGUAL  shift, and go to state 67
    MENORIGUAL  shift, and go to state 68
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '*'         shift, and go to state 28
    '/'         shift, and go to state 29


State 40

   13 sent: SI logexp . sent
   14     | SI logexp . sent OTRO sent
   17     | SI logexp . '{' bloques '}'
   18     | SI logexp . '{' bloques '}' OTRO sent
   34 logexp: logexp . AND logexp
   35       | logexp . OR logexp

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21
    OR         shift, and go to state 69
    AND        shift, and go to state 70
    '{'        shift, and go to state 71

    sent  go to state 72


State 41

   19 sent: MIENTRAS '(' . logexp ')' sent
   21     | MIENTRAS '(' . logexp ')' '{' bloques '}'
   33 exp: '(' . exp ')'

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    NOT     shift, and go to state 37
    '('     shift, and go to state 14

    exp     go to state 61
    logexp  go to state 73


State 42

   20 sent: MIENTRAS logexp . sent
   22     | MIENTRAS logexp . '{' bloques '}'
   34 logexp: logexp . AND logexp
   35       | logexp . OR logexp

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21
    OR         shift, and go to state 69
    AND        shift, and go to state 70
    '{'        shift, and go to state 74

    sent  go to state 75


State 43

    6 bloq: '{' bloques '}' .

    $default  reduce using rule 6 (bloq)


State 44

    8 bloques: sent bloques .

    $default  reduce using rule 8 (bloques)


State 45

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   48 parami: exp . lparami

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ','  shift, and go to state 76

    $default  reduce using rule 49 (lparami)

    lparami  go to state 77


State 46

   28 exp: ID '(' parami . ')'

    ')'  shift, and go to state 78


State 47

   33 exp: '(' exp ')' .

    $default  reduce using rule 33 (exp)


State 48

   29 exp: exp . '+' exp
   29    | exp '+' exp .
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 29 (exp)


State 49

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   30    | exp '-' exp .
   31    | exp . '*' exp
   32    | exp . '/' exp

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 30 (exp)


State 50

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   31    | exp '*' exp .
   32    | exp . '/' exp

    $default  reduce using rule 31 (exp)


State 51

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   32    | exp '/' exp .

    $default  reduce using rule 32 (exp)


State 52

   46 lparam: ',' . ID lparam

    ID  shift, and go to state 79


State 53

   44 paramd: ID lparam .

    $default  reduce using rule 44 (paramd)


State 54

    5 sentdecla: DEFINEF ID '(' paramd ')' . ':' TIPOENT '{' bloques '}'

    ':'  shift, and go to state 80


State 55

   23 sent: ID '=' exp . ';'
   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ';'  shift, and go to state 81


State 56

   25 sent: ID '(' parami . ')' ';'

    ')'  shift, and go to state 82


State 57

   10 sent: DESPLIEGA '(' CADE . ')' ';'

    ')'  shift, and go to state 83


State 58

    9 sent: DESPLIEGA '(' exp . ')' ';'
   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ')'  shift, and go to state 84


State 59

   24 sent: REGRESA exp ';' .

    $default  reduce using rule 24 (sent)


State 60

   34 logexp: logexp . AND logexp
   35       | logexp . OR logexp
   36       | NOT logexp .

    OR   shift, and go to state 69
    AND  shift, and go to state 70

    $default  reduce using rule 36 (logexp)


State 61

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   33    | '(' exp . ')'
   37 logexp: exp . IGUAL exp
   38       | exp . DIFER exp
   39       | exp . MAYORQUE exp
   40       | exp . MENORQUE exp
   41       | exp . MAYORIGUAL exp
   42       | exp . MENORIGUAL exp

    DIFER       shift, and go to state 63
    IGUAL       shift, and go to state 64
    MAYORQUE    shift, and go to state 65
    MENORQUE    shift, and go to state 66
    MAYORIGUAL  shift, and go to state 67
    MENORIGUAL  shift, and go to state 68
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '*'         shift, and go to state 28
    '/'         shift, and go to state 29
    ')'         shift, and go to state 47


State 62

   11 sent: SI '(' logexp . ')' sent
   12     | SI '(' logexp . ')' sent OTRO sent
   15     | SI '(' logexp . ')' '{' bloques '}'
   16     | SI '(' logexp . ')' '{' bloques '}' OTRO sent
   34 logexp: logexp . AND logexp
   35       | logexp . OR logexp

    OR   shift, and go to state 69
    AND  shift, and go to state 70
    ')'  shift, and go to state 85


State 63

   38 logexp: exp DIFER . exp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 86


State 64

   37 logexp: exp IGUAL . exp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 87


State 65

   39 logexp: exp MAYORQUE . exp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 88


State 66

   40 logexp: exp MENORQUE . exp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 89


State 67

   41 logexp: exp MAYORIGUAL . exp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 90


State 68

   42 logexp: exp MENORIGUAL . exp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 91


State 69

   35 logexp: logexp OR . logexp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    NOT     shift, and go to state 37
    '('     shift, and go to state 14

    exp     go to state 39
    logexp  go to state 92


State 70

   34 logexp: logexp AND . logexp

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    NOT     shift, and go to state 37
    '('     shift, and go to state 14

    exp     go to state 39
    logexp  go to state 93


State 71

   17 sent: SI logexp '{' . bloques '}'
   18     | SI logexp '{' . bloques '}' OTRO sent

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21

    $default  reduce using rule 7 (bloques)

    bloques  go to state 94
    sent     go to state 23


State 72

   13 sent: SI logexp sent .
   14     | SI logexp sent . OTRO sent

    OTRO  shift, and go to state 95

    $default  reduce using rule 13 (sent)


State 73

   19 sent: MIENTRAS '(' logexp . ')' sent
   21     | MIENTRAS '(' logexp . ')' '{' bloques '}'
   34 logexp: logexp . AND logexp
   35       | logexp . OR logexp

    OR   shift, and go to state 69
    AND  shift, and go to state 70
    ')'  shift, and go to state 96


State 74

   22 sent: MIENTRAS logexp '{' . bloques '}'

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21

    $default  reduce using rule 7 (bloques)

    bloques  go to state 97
    sent     go to state 23


State 75

   20 sent: MIENTRAS logexp sent .

    $default  reduce using rule 20 (sent)


State 76

   50 lparami: ',' . exp lparami

    ID      shift, and go to state 12
    ENTERO  shift, and go to state 13
    '('     shift, and go to state 14

    exp  go to state 98


State 77

   48 parami: exp lparami .

    $default  reduce using rule 48 (parami)


State 78

   28 exp: ID '(' parami ')' .

    $default  reduce using rule 28 (exp)


State 79

   46 lparam: ',' ID . lparam

    ','  shift, and go to state 52

    $default  reduce using rule 45 (lparam)

    lparam  go to state 99


State 80

    5 sentdecla: DEFINEF ID '(' paramd ')' ':' . TIPOENT '{' bloques '}'

    TIPOENT  shift, and go to state 100


State 81

   23 sent: ID '=' exp ';' .

    $default  reduce using rule 23 (sent)


State 82

   25 sent: ID '(' parami ')' . ';'

    ';'  shift, and go to state 101


State 83

   10 sent: DESPLIEGA '(' CADE ')' . ';'

    ';'  shift, and go to state 102


State 84

    9 sent: DESPLIEGA '(' exp ')' . ';'

    ';'  shift, and go to state 103


State 85

   11 sent: SI '(' logexp ')' . sent
   12     | SI '(' logexp ')' . sent OTRO sent
   15     | SI '(' logexp ')' . '{' bloques '}'
   16     | SI '(' logexp ')' . '{' bloques '}' OTRO sent

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21
    '{'        shift, and go to state 104

    sent  go to state 105


State 86

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   38 logexp: exp DIFER exp .

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 38 (logexp)


State 87

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   37 logexp: exp IGUAL exp .

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 37 (logexp)


State 88

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   39 logexp: exp MAYORQUE exp .

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 39 (logexp)


State 89

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   40 logexp: exp MENORQUE exp .

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 40 (logexp)


State 90

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   41 logexp: exp MAYORIGUAL exp .

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 41 (logexp)


State 91

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   42 logexp: exp MENORIGUAL exp .

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 42 (logexp)


State 92

   34 logexp: logexp . AND logexp
   35       | logexp . OR logexp
   35       | logexp OR logexp .

    AND  shift, and go to state 70

    $default  reduce using rule 35 (logexp)


State 93

   34 logexp: logexp . AND logexp
   34       | logexp AND logexp .
   35       | logexp . OR logexp

    $default  reduce using rule 34 (logexp)


State 94

   17 sent: SI logexp '{' bloques . '}'
   18     | SI logexp '{' bloques . '}' OTRO sent

    '}'  shift, and go to state 106


State 95

   14 sent: SI logexp sent OTRO . sent

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21

    sent  go to state 107


State 96

   19 sent: MIENTRAS '(' logexp ')' . sent
   21     | MIENTRAS '(' logexp ')' . '{' bloques '}'

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21
    '{'        shift, and go to state 108

    sent  go to state 109


State 97

   22 sent: MIENTRAS logexp '{' bloques . '}'

    '}'  shift, and go to state 110


State 98

   29 exp: exp . '+' exp
   30    | exp . '-' exp
   31    | exp . '*' exp
   32    | exp . '/' exp
   50 lparami: ',' exp . lparami

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ','  shift, and go to state 76

    $default  reduce using rule 49 (lparami)

    lparami  go to state 111


State 99

   46 lparam: ',' ID lparam .

    $default  reduce using rule 46 (lparam)


State 100

    5 sentdecla: DEFINEF ID '(' paramd ')' ':' TIPOENT . '{' bloques '}'

    '{'  shift, and go to state 112


State 101

   25 sent: ID '(' parami ')' ';' .

    $default  reduce using rule 25 (sent)


State 102

   10 sent: DESPLIEGA '(' CADE ')' ';' .

    $default  reduce using rule 10 (sent)


State 103

    9 sent: DESPLIEGA '(' exp ')' ';' .

    $default  reduce using rule 9 (sent)


State 104

   15 sent: SI '(' logexp ')' '{' . bloques '}'
   16     | SI '(' logexp ')' '{' . bloques '}' OTRO sent

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21

    $default  reduce using rule 7 (bloques)

    bloques  go to state 113
    sent     go to state 23


State 105

   11 sent: SI '(' logexp ')' sent .
   12     | SI '(' logexp ')' sent . OTRO sent

    OTRO  shift, and go to state 114

    $default  reduce using rule 11 (sent)


State 106

   17 sent: SI logexp '{' bloques '}' .
   18     | SI logexp '{' bloques '}' . OTRO sent

    OTRO  shift, and go to state 115

    $default  reduce using rule 17 (sent)


State 107

   14 sent: SI logexp sent OTRO sent .

    $default  reduce using rule 14 (sent)


State 108

   21 sent: MIENTRAS '(' logexp ')' '{' . bloques '}'

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21

    $default  reduce using rule 7 (bloques)

    bloques  go to state 116
    sent     go to state 23


State 109

   19 sent: MIENTRAS '(' logexp ')' sent .

    $default  reduce using rule 19 (sent)


State 110

   22 sent: MIENTRAS logexp '{' bloques '}' .

    $default  reduce using rule 22 (sent)


State 111

   50 lparami: ',' exp lparami .

    $default  reduce using rule 50 (lparami)


State 112

    5 sentdecla: DEFINEF ID '(' paramd ')' ':' TIPOENT '{' . bloques '}'

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21

    $default  reduce using rule 7 (bloques)

    bloques  go to state 117
    sent     go to state 23


State 113

   15 sent: SI '(' logexp ')' '{' bloques . '}'
   16     | SI '(' logexp ')' '{' bloques . '}' OTRO sent

    '}'  shift, and go to state 118


State 114

   12 sent: SI '(' logexp ')' sent OTRO . sent

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21

    sent  go to state 119


State 115

   18 sent: SI logexp '{' bloques '}' OTRO . sent

    ID         shift, and go to state 17
    DESPLIEGA  shift, and go to state 18
    REGRESA    shift, and go to state 19
    SI         shift, and go to state 20
    MIENTRAS   shift, and go to state 21

    sent  go to state 120


State 116

   21 sent: MIENTRAS '(' logexp ')' '{' bloques . '}'

    '}'  shift, and go to state 121


State 117

    5 sentdecla: DEFINEF ID '(' paramd ')' ':' TIPOENT '{' bloques . '}'

    '}'  shift, and go to state 122


State 118

   15 sent: SI '(' logexp ')' '{' bloques '}' .
   16     | SI '(' logexp ')' '{' bloques '}' . OTRO sent

    OTRO  shift, and go to state 123

    $default  reduce using rule 15 (sent)


State 119
